# lookyloo-models

./: README.md  pyproject.toml
.github/workflows/: basic.yml  package.yml
src/lookyloo_models/: __init__.py  models.py
