[project]
name = "lookyloo-models"
version = "0.1.5"
description = "All the Pydantic models used across Lookyloo"
readme = "README.md"
authors = [
    { name = "Raphaël Vinot", email = "raphael.vinot@circl.lu" }
]
requires-python = ">=3.10, <4"
dependencies = [
    "dateparser>=1.3.0",
    "orjson>=3.11.7",
    "pydantic>=2.12.5",
    "pydantic-core>=2.41.5",
]

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ty>=0.0.24",
]
