[project]
name = "lookyloo-models"
version = "0.2.3"
description = "All the Pydantic models used across Lookyloo"
readme = "README.md"
authors = [
    { name = "Raphaël Vinot", email = "raphael.vinot@circl.lu" }
]
requires-python = ">=3.10, <4"
dependencies = [
    "dateparser>=1.4.0",
    "orjson>=3.11.8",
    "pydantic>=2.13",
    "ua-parser[regex]>=1.0.1",
]

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ty>=0.0.24",
    "deptry>=0.25",
    "ipython>=8.39.0",
]
